mobile stuck screen fix

--- a/style.css
+++ b/style.css
@@ -3,7 +3,6 @@
 body {
   background-color: #212121;
   font-family: "Montserrat", sans-serif;
-  overflow: hidden;
 }
 
 * {
